# inquestor

./: .gitignore  pyproject.toml
.github/workflows/: github-actions.yaml
src/inquestor/: __init__.py  inquestor.py
tests/: test_api.py
