[project]
name = "inquestor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GustaafL", email = "41048720+GustaafL@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
