[project]
name = "inquestor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "GustaafL", email = "41048720+GustaafL@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.28.4",
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.2",
]
